// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Circle > should render 1`] = `
<div>
  <div
    class="ring-theme-background duration-100 css-1oa5zbt"
  />
</div>
`;

exports[`Circle > should render as avatar 1`] = `
<div>
  <div
    class="ring-theme-background duration-100 css-18vj24t"
  />
</div>
`;

exports[`Circle > should render extra-large 1`] = `
<div>
  <div
    class="ring-theme-background duration-100 css-1qtfeue"
  />
</div>
`;

exports[`Circle > should render large 1`] = `
<div>
  <div
    class="ring-theme-background duration-100 css-1nqcsx"
  />
</div>
`;

exports[`Circle > should render small 1`] = `
<div>
  <div
    class="ring-theme-background duration-100 css-y4ij4"
  />
</div>
`;

exports[`Circle > should render with content 1`] = `
<div>
  <div
    class="ring-theme-background duration-100 css-y4ij4"
  >
    <div
      data-testid="circle__content"
    />
  </div>
</div>
`;

exports[`Circle > should render with no shadow 1`] = `
<div>
  <div
    class="ring-theme-background duration-100 css-cm9d5u"
  />
</div>
`;
